changed base css filename

--- a/default.html
+++ b/default.html
@@ -9,7 +9,7 @@
         <script type="text/javascript" src="{{ script }}"></script>
         {% endfor %}
                 
-        <link href="{{ site.baseurl }}/common/css/common.css" rel="stylesheet"/>
+        <link href="{{ site.baseurl }}/common/css/base.css" rel="stylesheet"/>
         
         {% for css in site.local_css %}
         <link href="{{ css }}" rel="stylesheet"></script>
