--- a/page.html
+++ b/page.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <article class="page">
-    <header>
+    <header class="page-header">
         <h1 class="page-title">{{ page.title }}</h1>
     </header>
     {{ content }}
