bootstrap the footer

--- a/default.html
+++ b/default.html
@@ -57,8 +57,8 @@
                 {{ content }}
             </div>
             
-            <footer class="site-footer">
-                <div>
+            <footer class="site-footer row">
+                <div class="col-md-12">
                     {% if site.footernav %}
                     <nav class="footer">
                     {% include {{ site.footernav }} %}
